--- a/app/src/main/res/layout/activity_new_friend.xml
+++ b/app/src/main/res/layout/activity_new_friend.xml
@@ -17,8 +17,9 @@
         <ImageView
             android:id="@+id/iv_return"
             android:layout_width="@dimen/title_bar_height"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_arrow_left" />
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_return" />
 
 
         <TextView
@@ -36,6 +37,7 @@
         android:id="@+id/newFriend"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="60dp"
+        android:paddingHorizontal="5dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         >
@@ -44,8 +46,6 @@
             android:id="@+id/weixinId"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:layout_centerInParent="true"
             android:inputType="text"
@@ -59,17 +59,15 @@
     </LinearLayout>
 
     <LinearLayout android:layout_width="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="60dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="45dp"
         android:orientation="horizontal"
-        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:layout_marginTop="10dp"
         android:background="@drawable/back_top_line"
         android:id="@+id/new_friend_res"
         >
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/avatar2"
             android:id="@+id/new_friend_avatar"
             android:layout_gravity="center"
@@ -85,28 +83,27 @@
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:text="昵称"
-            android:textSize="18sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
 
     <LinearLayout android:layout_width="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/sub_menu_gap"
         android:background="@drawable/back_top_line"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:text="好友申请"
-            android:textSize="18sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -114,7 +111,6 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/new_friends_recylerview"
-        android:layout_marginTop="@dimen/sub_menu_gap"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
