--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -37,7 +37,7 @@
     <LinearLayout android:layout_width="match_parent"
         android:id="@+id/newFriend"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:background="@drawable/back_top_line"
@@ -45,12 +45,12 @@
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_add_people"
+            android:src="@drawable/ic_person"
             android:id="@+id/new_friend_icon"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="15dp"
-            app:tint="@color/colorPrimary">
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="15dp"
+            >
         </ImageView>
 
         <TextView
@@ -60,27 +60,24 @@
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:text="新的朋友"
-            android:textSize="18sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout android:layout_width="match_parent"
         android:id="@+id/newGroup"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="60dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="45dp"
         android:orientation="horizontal"
         android:background="@drawable/back_top_line"
         >
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_people_nearby"
+            android:src="@drawable/ic_group"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="15dp"
-            app:tint="@color/colorPrimary">
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="15dp"
+            >
         </ImageView>
 
         <TextView
@@ -89,8 +86,7 @@
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:text="新建群聊"
-            android:textSize="18sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
