--- a/app/src/main/res/drawable/ic_send.xml
+++ b/app/src/main/res/drawable/ic_send.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="@color/colorPrimary"
+      android:fillColor="#000"
       android:pathData="M85.33,896 L981.33,512 85.33,128 85.33,426.67 725.33,512 85.33,597.33 85.33,896Z"/>
 </vector>
