--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -8,17 +8,15 @@
         android:id="@+id/top_panel"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="20sp">
+        android:layout_height="50dp">
         <TextView
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="#000000"
             android:gravity="center_vertical"
-            android:textSize="20sp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
             android:text="取消" />
 
         <TextView
@@ -33,16 +31,15 @@
 
         <Button
             android:id="@+id/confirmButton"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="确定"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
     </RelativeLayout>
@@ -55,12 +52,11 @@
         <EditText
             android:id="@+id/edit"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:padding="15dp"
-            android:layout_centerInParent="true"
+            android:paddingHorizontal="15dp"
             android:background="@drawable/et_custom"
             android:textSize="15sp" />
     </LinearLayout>
@@ -70,5 +66,5 @@
         android:layout_weight="2"
         android:layout_marginTop="@dimen/sub_menu_gap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp" />
 </LinearLayout>
