--- a/app/src/main/res/layout/fragment_send_action.xml
+++ b/app/src/main/res/layout/fragment_send_action.xml
@@ -9,16 +9,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:textSize="20sp">
+        >
         <TextView
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="#000000"
             android:gravity="center_vertical"
-            android:textSize="20sp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
             android:text="取消" />
 
         <TextView
@@ -33,16 +32,15 @@
 
         <Button
             android:id="@+id/confirmButton"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="确定"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
     </RelativeLayout>
@@ -50,67 +48,62 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="3"
-        android:layout_gravity="center|top"
+        android:columnCount="4"
         >
 
         <Button
             android:id="@+id/sendImage"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="发送图片"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/sendAudio"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="发送音频"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
 
         <Button
             android:id="@+id/sendVideo"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_custom"
             android:layout_marginLeft="10dp"
             android:padding="0dp"
             android:text="发送视频"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/sendLocation"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="发送位置"
-            android:textSize="20sp"
             android:textColor="@android:color/white" />
 
     </GridLayout>
 
     <LinearLayout
-        android:layout_marginTop="@dimen/sub_menu_gap"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:padding="10dp"
         android:layout_height="match_parent">
