--- a/app/src/main/res/layout/item_list_avatar.xml
+++ b/app/src/main/res/layout/item_list_avatar.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="60dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/back_top_line"
     android:orientation="vertical">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/avatar_icon"
-        android:layout_width="45dp"
+        android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:layout_gravity="center"
-        android:foregroundGravity="center"
-        android:src="@drawable/avatar2" />
+        app:riv_corner_radius="8dp"
+        app:riv_border_color="#fff"
+        android:src="@drawable/avatar1" />
 
     <TextView
         android:id="@+id/nickname_text"
