--- a/app/src/main/res/layout/item_list_chat.xml
+++ b/app/src/main/res/layout/item_list_chat.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/back_top_line"
     android:paddingRight="10dp"
     android:orientation="horizontal">
@@ -10,14 +11,16 @@
         android:id="@+id/frame"
         android:layout_width="60dp"
         android:layout_height="60dp">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/avatar_icon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:scaleType="fitCenter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            app:riv_corner_radius="8dp"
+            app:riv_border_color="#fff"
             android:src="@drawable/avatar2" />
 
 
