--- a/app/src/main/res/layout/item_list_contact.xml
+++ b/app/src/main/res/layout/item_list_contact.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="60dp"
+    android:layout_height="45dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:background="@drawable/back_top_line"
     >
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:riv_corner_radius="8dp"
+        app:riv_border_color="#fff"
         android:src="@drawable/avatar2"
         android:id="@+id/avatar_icon"
+        android:scaleType="centerCrop"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         >
-    </ImageView>
+    </com.makeramen.roundedimageview.RoundedImageView>
 
     <TextView
         android:id="@+id/nickname_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
+        android:layout_gravity="center"
         android:text="昵称"
         android:layout_weight="2"
-        android:textAlignment="textStart"
-        android:textSize="18sp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/deleteButton"
         android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:background="@drawable/btn_custom"
         android:padding="0dp"
         android:text="删除"
-        android:textSize="16sp"
         android:textColor="@android:color/white" />
 
 </LinearLayout>
