--- a/app/src/main/res/layout/item_list_new_group.xml
+++ b/app/src/main/res/layout/item_list_new_group.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="60dp"
+    android:layout_height="45dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:background="@drawable/back_top_line"
     >
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/avatar2"
         android:id="@+id/avatar_icon"
         android:layout_gravity="center"
@@ -22,12 +22,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_weight="2"
-        android:textAlignment="textStart"
         android:text="昵称"
-        android:textSize="18sp"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold" />
 
     <CheckBox
         android:id="@+id/checkbox"
