--- a/app/src/main/res/layout/item_list_reply.xml
+++ b/app/src/main/res/layout/item_list_reply.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingLeft="5dp"
+    android:paddingBottom="3dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello"
         android:id="@+id/name"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        ></TextView>
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:text=":"
         android:layout_marginLeft="2dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="2dp"
         >
 
     </TextView>
@@ -32,8 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:textAlignment="textStart"
+        android:gravity="center_vertical"
         android:text="Reply ..."
         android:id="@+id/reply"
         >
