--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -2,17 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="10dp"
     android:paddingRight="15dp"
     android:clipToPadding="false">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
+        app:riv_corner_radius="8dp"
         android:id="@+id/avatar"
-        android:layout_alignParentRight="true"
-        android:scaleType="centerInside"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
         android:src="@drawable/avatar2"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,9 +25,8 @@
         android:paddingHorizontal="16dp"
         android:layout_toStartOf="@+id/avatar"
         android:elevation="2dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:textSize="18dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
         android:text="Hello"
         />
 </RelativeLayout>
