--- a/app/src/main/res/layout/my_message_location.xml
+++ b/app/src/main/res/layout/my_message_location.xml
@@ -2,17 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="10dp"
     android:paddingRight="15dp"
     android:clipToPadding="false">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
+        app:riv_corner_radius="8dp"
         android:id="@+id/avatar"
         android:layout_alignParentRight="true"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:src="@drawable/avatar2"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
     <com.amap.api.maps2d.MapView
         android:layout_width="300dp"
