--- a/app/src/main/res/layout/other_message.xml
+++ b/app/src/main/res/layout/other_message.xml
@@ -2,24 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="10dp"
     android:paddingLeft="15dp"
     android:paddingRight="60dp"
     android:clipToPadding="false">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
+        app:riv_corner_radius="8dp"
         android:id="@+id/avatar"
         android:layout_alignParentLeft="true"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:src="@drawable/avatar2"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
     <TextView
         android:id="@+id/name"
         android:layout_marginLeft="15dp"
         android:layout_toRightOf="@+id/avatar"
         android:layout_alignTop="@+id/avatar"
+        android:layout_marginTop="-5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
@@ -35,7 +38,6 @@
         android:paddingVertical="12dp"
         android:paddingHorizontal="16dp"
         android:elevation="2dp"
-        android:textSize="18dp"
         android:text="How are you doing? This is a long message that should probably wrap."
         />
 </RelativeLayout>
