--- a/app/src/main/res/layout/discover_detail.xml
+++ b/app/src/main/res/layout/discover_detail.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <com.google.android.exoplayer2.ui.PlayerView
-        android:layout_marginTop="5dp"
+        android:paddingTop="5dp"
         android:id="@+id/video"
         android:layout_width="match_parent"
         android:layout_height="300dp" />
