--- a/app/src/main/res/layout/activity_wechat.xml
+++ b/app/src/main/res/layout/activity_wechat.xml
@@ -20,7 +20,8 @@
             android:textColor="#000000"
             android:gravity="center_vertical"
             android:layout_marginStart="10dp"
-            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
             android:text="发现" />
 
         <ImageView
@@ -32,13 +33,12 @@
             android:layout_height="wrap_content"
             android:layout_width="40dp" />
 
-        <ImageView
-            android:id="@+id/search_button"
-            android:layout_toStartOf="@id/add_button"
-            android:src="@drawable/ic_search"
-            android:padding="10dp"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content" />
+<!--        <ImageView-->
+<!--            android:id="@+id/search_button"-->
+<!--            android:src="@drawable/ic_search"-->
+<!--            android:padding="10dp"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="wrap_content" />-->
 
     </RelativeLayout>
 
