--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -11,8 +11,7 @@
         android:id="@+id/top_panel"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="20sp">
+        android:layout_height="50dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,7 +19,7 @@
             android:textColor="#000000"
             android:gravity="center_vertical"
             android:layout_centerHorizontal="true"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:text="好友" />
 
         <ImageView
