--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -17,6 +17,7 @@
             android:gravity="center_vertical"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
+            android:textSize="16sp"
             android:text="取消" />
 
         <TextView
@@ -25,7 +26,8 @@
             android:layout_height="match_parent"
             android:textColor="#000000"
             android:gravity="center_vertical"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:text="新建群聊" />
 
@@ -37,8 +39,10 @@
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
+            android:layout_centerVertical="true"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
+            android:textSize="16sp"
             android:text="确定"
             android:textColor="@android:color/white" />
 
