--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -20,17 +20,17 @@
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome, Let's Chat"
+        android:text="让我们来聊天吧"
         android:textSize="17sp"
         android:layout_marginStart="25dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:layout_above="@id/registerWeixinId"/>
 
     <EditText
         android:id="@+id/registerWeixinId"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="WeixinId"
+        android:hint="微信号"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:padding="15dp"
@@ -42,7 +42,7 @@
         android:id="@+id/registerUsername"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Username"
+        android:hint="姓名"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
@@ -55,7 +55,7 @@
         android:id="@+id/registerPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Password"
+        android:hint="密码"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
@@ -76,7 +76,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/white"
-        android:text="Register"/>
+        android:text="注册"/>
 
     <ImageView
         android:layout_width="30dp"
@@ -90,7 +90,7 @@
         android:id="@+id/swipeLeftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Swipe Right To Login"
+        android:text="向右滑动进行登录"
         android:textSize="15sp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
