--- a/app/src/main/res/layout/fragment_create_discover.xml
+++ b/app/src/main/res/layout/fragment_create_discover.xml
@@ -68,6 +68,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:paddingHorizontal="10dp"
         android:layout_height="wrap_content"
         android:id="@+id/images"
         />
@@ -91,26 +92,26 @@
 
         <Button
             android:id="@+id/uploadImage"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="上传图片"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/uploadVideo"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/btn_custom"
             android:padding="0dp"
             android:text="上传视频"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
