--- a/app/src/main/res/layout/item_list_image.xml
+++ b/app/src/main/res/layout/item_list_image.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView android:layout_width="120dp"
     android:layout_height="120dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
     android:id="@+id/image"
     android:src="@drawable/splash"
     android:scaleType="centerCrop"
